--- a/Project1/readme
+++ b/Project1/readme
@@ -1,1 +1,3 @@
+Data used for project 1 and later on in project 3 is from: https://data.cityofchicago.org/stories/s/Crimes-2001-to-present-Dashboard/5cd6-ry5g
+
 
